2008-02-09  Jason Rumney  <jasonr@gnu.org>

	* button.el (button-map):
	* wid-edit.el (widget-keymap): Avoid line-end confusion in autoloads.
	* ldefs-bool.el: Regenerate.

2008-02-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* epa.el (epa-faces, epa):
	* epa-file.el (epa-file):
	* epg-config.el (epg): Add :version.

2008-02-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc.el (vc-exec-after): Append CODE to previous fragments.
	(vc-diff-finish): Take BUFFER directly, not BUFFER-NAME;
	take MESSAGES instead of VERBOSE; use it when non-nil.
	(vc-diff-internal): Compute messages once; use them;
	update call to vc-diff-finish.

2008-02-09  Michael Olson  <mwolson@gnu.org>

	* net/tramp.el (tramp-process-sentinel): Avoid error when process
	buffer has been killed, such as by
	`tramp-cleanup-all-connections'.

2008-02-09  Miles Bader  <miles@gnu.org>

	* net/rcirc.el (rcirc-omit-mode): Suppress invisibility ellipsis.

2008-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-add-change-log-entries-other-window): Avoid the
	splitter in context hunks.

2008-02-08  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/fontset.el (setup-default-fontset): Fix arabic otf
	font specification.

2008-02-08  Daiki Ueno  <ueno@unixuser.org>

	* epa-dired.el:
	* epa-file.el:
	* epa-mail.el:
	* epa-setup.el:
	* epa.el:
	* epg-config.el:
	* epg-package-info.el:
	* epg.el: Initial check-in of EasyPG.

2008-02-08  Glenn Morris  <rgm@gnu.org>

	* woman.el (woman-locale): New defcustom.
	(woman-expand-locale, woman-manpath-add-locales): New functions.
	(woman-manpath): Call woman-manpath-add-locales.  Bump :version.

	* international/mule-cmds.el (locale-translate): New function,
	with old code extracted from set-locale-environment.
	(set-locale-environment): Use locale-translate.  Set woman-locale.

	* cus-start.el (selection-coding-system): Remove, since it's now
	defined in select.el rather than in xselect.c.