@@ -1,3 +1,8 @@
+2008-02-10  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* diff-mode.el (diff-add-change-log-entries-other-window): Use
+	add-change-log-entry.
+
 2008-02-09  Jason Rumney  <jasonr@gnu.org>
 
 	* button.el (button-map):
